fixed page alignment

--- a/PetShop.MVC/wwwroot/styles/AnimalStyle.css
+++ b/PetShop.MVC/wwwroot/styles/AnimalStyle.css
@@ -1,4 +1,5 @@
 ﻿.animal-box {
+    margin:10px;
     background-color: #cedede;
     padding: 5px;
     border: 1px solid #BBBAC6;
