--- a/PetShop.MVC/wwwroot/styles/Style.css
+++ b/PetShop.MVC/wwwroot/styles/Style.css
@@ -12,7 +12,6 @@ main{
 }
 
 .page-container {
-    width:80%;
     display: flex;
     flex-direction:column;
     justify-content: center;
